bdr.BDR2.scala.error
Compilation error:
BDR2:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var l:String
    ^BDR2:2: error: local variables must be initialized
var l:String
    ^